2007-09-26 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* ember.conf: bumped version

2007-09-26 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/EntityIcon.pkg, src/components/ogre/scripting/bindings/lua/EntityIconDragDropTarget.pkg, src/components/ogre/scripting/bindings/lua/EntityIconSlot.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h: updated bindings

2007-09-26 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/EntityIcon.cpp, src/components/ogre/widgets/EntityIcon.h, src/components/ogre/widgets/EntityIconDragDropTarget.cpp, src/components/ogre/widgets/EntityIconDragDropTarget.h, src/components/ogre/widgets/EntityIconSlot.cpp, src/components/ogre/widgets/EntityIconSlot.h, src/components/ogre/widgets/Inventory.lua, src/components/ogre/widgets/Makefile.am: separated the functionality for recieving entity icon drag and drop actions to its own file, made both the slots and the icons inherit it, so that icons can be dropped on other icons

2007-09-26 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/cegui/datafiles/fonts/Font.xsd, src/components/ogre/cegui/datafiles/imagesets/Imageset.xsd, src/components/ogre/cegui/datafiles/looknfeel/EmberLook.looknfeel, src/components/ogre/cegui/datafiles/looknfeel/Falagard.xsd, src/components/ogre/cegui/datafiles/schemes/GUIScheme.xsd: updated with correct definitions

2007-09-24 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/WorldEmberEntity.cpp: use the ShaderFactories for creating shaders, thus letting Mercator take care of all selection and logic

2007-09-22 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/Inventory.layout, src/components/ogre/widgets/Inventory.lua: use common code for doll slots, when dragging icons, only show those slots where it can be dragged